--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/loan.png" />
+    <!-- ✅ Change to relative path -->
+    <link rel="icon" type="image/png" href="./loan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Home Loan + SIP Savings Calculator</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- ✅ Change to relative path -->
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
